css/style.css
/* ... */
#page-hero .flexslider .flex-control-nav li a.flex-active{
    cursor:pointer;
    background:rgba(255,255,255,.7)
}
#page-hero .flexslider .flex-direction-nav{
    display:block
}
#page-hero .flexslider .flex-direction-nav a{
    position:absolute;
    cursor:pointer;
    width:45px;
    height:45px
}
#page-hero .flexslider .flex-direction-nav a:before{
    left:0;
    top:0;
    color:#fff!important;
    text-shadow:none!important;
    font-size:40px;
    position:relative;
    z-index:10
}
#page-hero .flexslider .flex-direction-nav a.flex-prev{
    opacity:1!important;
    left:40px!important
}
#page-hero .flexslider .flex-direction-nav a.flex-prev:before{
    text-indent:0!important;
    font-family:icomoon;
    speak:none;
    font-style:normal;
    font-weight:400;
    font-variant:normal;
    text-transform:none;
    line-height:1;
    -webkit-font-smoothing:antialiased;
    -moz-osx-font-smoothing:grayscale;
    content:"\e929"
}
#page-hero .flexslider .flex-direction-nav a.flex-next{
    right:40px!important;
    opacity:1!important
}
#page-hero .flexslider .flex-direction-nav a.flex-next:before{
    font-family:icomoon;
    speak:none;
    font-style:normal;
    font-weight:400;
    font-variant:normal;
    text-transform:none;
    line-height:1;
    -webkit-font-smoothing:antialiased;
    -moz-osx-font-smoothing:grayscale;
    text-indent:0!important;
    right:0;
    content:"\e92a"
}
#page-hero .flexslider .slider-text{
    display:table;
    opacity:0;
    min-height:700px
}
#page-hero .flexslider .slider-text>.slider-text-inner{
    display:table-cell;
    vertical-align:middle;
    min-height:700px
}
#page-hero .flexslider .slider-text>.slider-text-inner h2{
    font-size:60px;
    font-weight:300;
    color:#fff
}
@media screen and (max-width:768px){
    #page-hero .flexslider .slider-text>.slider-text-inner h2{
        font-size:40px
    }
}
#page-hero .flexslider .slider-text>.slider-text-inner .page-lead{
    font-size:20px;
    color:#fff
}
#page-hero .flexslider .slider-text>.slider-text-inner .page-lead .icon-heart{
    color:#E00000
}
.page-section-overflow{
    overflow:hidden;
    position:relative
}
#page-services .feature-left .icon i{
    color:#ccc!important
}
#page-services .feature-left h3{
    color:#E00000;
    font-size:22px
}

#page-pricing h3{
    color:#E00000;
    font-size:22px;
    font-weight: bold;
}
#page-pricing:before{
    content:"";
    position:absolute;
    z-index:-1;
    width:100%;
    height:81%;
    background-size: cover;
    -webkit-transform:skewY(-2deg);
    transform:skewY(-2deg);
    background-image:url(images/bg-4.jpg);
    top: 15%
}
@media screen and (max-width:990px){
    #page-pricing:before{
        top: 10%;
        height: 90%;
    }
}
.pricing-center h4{
    color:darkred;
    font-size:20px;
    margin: 0;
}
.pricing-center p{
    color: darkred;
    font-size:15px;
    font-weight: normal;
}
.pricing-center{
    text-align:center;
    padding: 10px;
    width:100%;
    margin-bottom:40px;
    background-color: rgba(255,255,255,0.8);
    border-radius: 15px;
}
.pricing-center .icon{
    width:90px;
    height:90px;
    display:table;
    text-align:center;
    margin: 0 auto;
    margin-bottom: 20px;
}
.pricing-center .icon i{
    display:table-cell;
    vertical-align:middle;
    height:90px;
    font-size:100px;
    line-height:100px;
    color: lightcoral;
}
.pricing-center h3,.pricing-center p{
    margin-bottom:30px
}
.pricing-center h3{
    font-size:18px;
    position:relative
}
.pricing-center p a{
    font-size: 20px;
    font-weight: bold;
}
#page-courses h3{
    color:#E00000;
    font-size:22px;
    font-weight: bold;
}
.courses-center{
    text-align:center;
    padding: 10px;
    width:100%;
    margin-bottom:40px;
    border-radius: 15px;
}
.courses-center .icon{
    width:90px;
    height:90px;
    display:table;
    text-align:center;
    margin: 0 auto;
    margin-bottom: 20px;
}
.courses-center .icon i{
    display:table-cell;
    vertical-align:middle;
    height:90px;
    font-size:100px;
    line-height:100px;
    color: #ccc;
}
.form{
    color: whitesmoke;
    display: flex;
    padding: 20px;
    position: relative;
    flex-direction: column;
    justify-content: center;
}
.form-box {
    width: 100%;
    margin: auto;
    position: center;
    padding: 10px;
    max-width: 80%;
    border-radius: 20px;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    background-color: rgba(224,0,0,0.1);
}

.form-box h1 {
    color: white;
    letter-spacing: 1px;
    margin: 10px 0 20px 10px;
}

.input-group {
    width: 100%;
    font-size: 20px;
    height: 50px;
    padding: 5px 10px;
    padding-top: 30px;
    position: relative;
    margin-bottom: 10px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    background-color: rgba(224, 0, 0, 0.3);
    border-radius: 20px;
}
.input-group input, .input-group select, .input-group textarea{
    width: 100%;
    border: none;
    outline: none;
    display: block;
    letter-spacing: 1px;
    background-color: transparent;
}
.input-group input:focus + label, .input-group input.active + label, .input-group select:focus + label, .input-group select.active + label {
    top: 5px;
    left: 5px;
    font-size: 16px;
}
.input-group label {
    top: 30px;
    left: 10px;
    opacity: 0.7;
    font-weight: 100;
    position: absolute;
    letter-spacing: 2px;
    pointer-events: none;
    transition: all 0.2s ease-in;
}
.input-group select {
    top: 30px;
    left: 10px;
    margin-top: 6px;
    margin-bottom: 6px;
    letter-spacing: 2px;
}
.input-group textarea{
    height: 116px;
    resize: none;
}
.input-group textarea::placeholder {
    color: whitesmoke;
    opacity: 0.7;
    letter-spacing: 1px;
}
/* ... */

